tests/paczka1/fuzzy1/22979422.err
Error in line 3: Tdp96 A910 40,7
Error in line 4: Tdp96 S128 71,7
Error in line 5: Tdp96 A994 88,0
Error in line 14: FejC 644 76,2
